feat(oauth): 集成完整的OAuth 2.1授权框架组件
- 引入atlas-richie-oauth-contract等9个核心依赖包
- 实现RFC 8707 resource和OIDC nonce授权码存储功能
- 添加分布式锁防止授权码并发兑换的安全机制
- 集成OAuth缓存组件提供全局和内存两种实现
- 扩展AuthorizationCodeGrant支持资源服务器特性
- 新增AuthorizationService提供无状态授权服务
- 实现安全的授权响应URI构建器防止注入攻击
- 添加MCP OAuth契约测试验证组件兼容性
- 升级授权端点支持nonce参数和设备授权端点
- 重构令牌生成逻辑支持自定义签名和声明定制